=== 0.2.1 ===
- Fix an authentication issue to do padding invalid params to Github.
- Allow auth next param to be a path.

=== 0.2.0 ===
- Support custom user models.

=== 0.1.0 ===
- Initial commit.