@@ -1,0 +1,8 @@
+class GithubException(Exception):
+    pass
+
+
+class BadVerificationCode(GithubException):
+    """
+    This happens if we send an invalid or already consumed OAuth code.
+    """
