@@ -1,6 +1,7 @@
 === 0.2.1 ===
 - Fix an authentication issue to do padding invalid params to Github.
 - Allow auth next param to be a path.
+- If the auth code is invalid, re-authenticate.
 
 === 0.2.0 ===
 - Support custom user models.
